app.api/k8s/deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: max-weather-ENV
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-api
  namespace: max-weather-ENV
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend-api
  template:
    metadata:
      labels:
        app: backend-api
    spec:
      nodeSelector:
        "kubernetes.io/os": linux
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: app
                    operator: In
                    values:
                      - backend-api
              topologyKey: kubernetes.io/hostname
      imagePullSecrets:
        - name: dockerhub 
      containers:
        - name: backend-api
          image: CONTAINER_REGISTRY_BASE_URI
          ports:
            - containerPort: 8086
              name: backend-api
          resources:
            requests:
              cpu: 256m
              memory: 512Mi
            limits:
              cpu: 512m
              memory: 1024Mi
