app.api/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-app-ingress
  namespace: max-weather-ENV
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    cert-manager.io/issuer: prod-issuer
    cert-manager.io/issuer-kind: OriginIssuer
    cert-manager.io/issuer-group: cert-manager.k8s.cloudflare.com
    external-dns.alpha.kubernetes.io/hostname: ENV-api-cuongnvecl.duckdns.org
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"

    cert-manager.io/cluster-issuer: "letsencrypt-prod"     
 
    alb.ingress.kubernetes.io/scheme: "internet-facing"    
    alb.ingress.kubernetes.io/target-type: "ip"


spec:
  rules:
  - host: ENV-api-cuongnvecl.duckdns.org
    http:
      paths:
      - path: / 
        pathType: Prefix
        backend:
          service:
            name: svc-backend-api
            port:
              number: 80 
  tls:
  - hosts:
    - ENV-api-cuongnvecl.duckdns.org
    secretName: app-tls
